# sunny-lang

./: .gitignore  Cargo.toml  ROADMAP.md  SCHELDULE.md  SPEC.md  STEP.md
.github/workflows/: deploy.yml
editors/vscode/sunny-lang/: README.md  language-configuration.json  package.json
editors/vscode/sunny-lang/syntaxes/: sunny.tmLanguage.json
examples/: hello.sunny  server.sunny
examples/docs/: docs.sunny  layout.html
examples/docs/pages/: getting-started.md  home.md  shadow.md  syntax.md
playground/: examples.js  index.html  runner.js  style.css  syntax.js
site/: site.sunny
site/layouts/: base.html
site/pages/: builtins.md  index.md  playground.md  server.md  shadow.md  syntax.md  tutorial.md  types.md
src/: ast.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  linter.rs  main.rs  markdown.rs  parser.rs  router.rs  server.rs  template.rs  token.rs  wasm.rs
